# rc_openipc

./: README.md  index.html  package.json
src/: App.tsx  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/src/: lib.rs  main.rs  webrtc.rs
src/routes/: +page.svelte
