[package]
name = "vulcan_rc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vulcan_rc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.32.0", features = ["full"] }

webrtc ="0.14.0"
env_logger = "0.11.3"
clap = "3"
hyper = { version = "0.14.27", features = ["full"] }
signal = { version = "0.1.1", package = "webrtc-signal" }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
chrono = "0.4.28"
log = "0.4"
bytes = "1"
lazy_static = "1"
rand = "0.9"
memchr = "2.1.1"
